--- a/findly-builder/src/app/components/app-body/app-body.component.html
+++ b/findly-builder/src/app/components/app-body/app-body.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
-<div [hidden]="bridgeData">
+<div *ngIf="!bridgeData">
     <app-insights  [data] = "bridgeData" [query]="query"></app-insights>
 </div> 
 <div [hidden]="addNewResult">
