--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -1,19 +1,17 @@
 
-    <div class="scheduler-box" style="display: none;">
+    <!-- <div class="scheduler-box" style="display: none;">
         <span class="scheduler-txt">Date</span>
-        <!-- <input id="scheduleDateId" type="text" class="input-text date-pick" placeholder="Select Date"> -->
           <input matInput [matDatepicker]="dp3" [min]="minDate" class="input-text date-pick" placeholder="Select Date" [(ngModel)] = "startDate" (dateInput)="addEvent('input', $event , 'regular')" (dateChange)="addEvent('change', $event ,'reguar')" autocomplete="off">
           <mat-datepicker-toggle matSuffix [for]="dp3"></mat-datepicker-toggle>
           <mat-datepicker #dp3 disabled="false"></mat-datepicker>
 
         <span class="scheduler-txt time">Time </span>
-        <input id="scheduleHr" type="number" min="0" max="12" class="input-text timeHH" placeholder="HH" name = "timeHH" [(ngModel)] = "timeHH" (ngModelChange)="modelChangeFn($event,'HH')">  <!-- <span class="scheduler-colon">:</span> -->
+        <input id="scheduleHr" type="number" min="0" max="12" class="input-text timeHH" placeholder="HH" name = "timeHH" [(ngModel)] = "timeHH" (ngModelChange)="modelChangeFn($event,'HH')">  
         <input id="scheduleMn" type="number" min="0" max="59" class="input-text timeMM" placeholder="MM" name = "timeMM" [(ngModel)] = "timeMM" (ngModelChange)="modelChangeFn($event,'MM')"> 
 
         <div id ="schedule-AM" class="schedule-AM " [ngClass] = "{'active' : meridiem == 'AM'}" (click)="changeMeridiem('AM')">AM</div>
         <div id ="schedule-PM"  class="schedule-PM" [ngClass] = "{'active' : meridiem == 'PM'}" (click)="changeMeridiem('PM')">PM</div>
 
-        <!-- dropdown -->
         <div class="kr-sg-dropdowns schedule-timZon">
           <div class="dropdown dropdown-open">
               <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span [ngClass] = "{'schedule-drop-text' : stz == 'Time Zone'}">{{stz}}</span></button>                                            
@@ -40,8 +38,7 @@
               </ul>
             </div>
         </div>
-        <!--  dropdown -->
-      </div>
+      </div> -->
 
 
   <!-- Restrcure data     -->
@@ -140,16 +137,18 @@
             <div>
               <span>Ends</span>
             </div>
-            <div class="ends-never">
+            <div class="ends-never row">
               <input type="radio" name="radio" value ="endsNever" class="ends-radio" (click)="endsFreq('never')"> <span class="sp sp-n">Never</span>
             </div>
-            <div class="ends-never sp-on">
+            <div class="ends-never sp-on row">
               <input type="radio" name="radio" value ="endsOn" class="ends-radio" (click)="endsFreq('on')"> <span class="sp">On</span>
-              <input matInput [matDatepicker]="dpCust" [min]="minDate"  class="input-text date-pick" placeholder="Select Date" [(ngModel)] = "endDate" (dateInput)="addEvent('input', $event,'custom')" (dateChange)="addEvent('change', $event , 'custom')" autocomplete="off" [disabled] = "!endsOn" >
-              <mat-datepicker-toggle matSuffix [for]="dpCust"></mat-datepicker-toggle>
-              <mat-datepicker #dpCust [disabled]="!endsOn"></mat-datepicker>
+              <div class="">       
+                <input matInput [matDatepicker]="dpCust" [min]="minDate"  class="input-text date-pick" placeholder="Select Date" [(ngModel)] = "endDate" (dateInput)="addEvent('input', $event,'custom')" (dateChange)="addEvent('change', $event , 'custom')" autocomplete="off" [disabled] = "!endsOn" >
+                <mat-datepicker-toggle matSuffix [for]="dpCust"></mat-datepicker-toggle>
+                <mat-datepicker #dpCust [disabled]="!endsOn"></mat-datepicker>
+              </div>
             </div>
-            <div class="ends-never sp-at">
+            <div class="ends-never sp-at row ">
               <input type="radio" name="radio"  value ="endsAt" class="ends-radio" (click)="endsFreq('at')"> <span class="sp">At</span>
               <input id="occurenceId" type="number" min="0" max="30" class="input-text date-pick" placeholder="0" [(ngModel)] = "occurence" [disabled] = "!endsAt"> <span class="occur-span">Occurences</span>
             </div>
